Fix converter alignment in Chrome

--- a/css/currency-converter.css
+++ b/css/currency-converter.css
@@ -1,17 +1,17 @@
 .currency-converter {
-  background-color: white;
-  border: 1px solid grey !important;
-  border-radius: 5px 0 0 5px;
-  bottom: -250px;
-  box-shadow: 0 5px 10px #000;
-  color: gray !important;
+  width: 350px;
   margin: 10px 0 0 10px;
   padding: 20px 30px 0 20px;
   position: fixed;
-  right: 0;
-  transition: all 0.3s ease-in-out;
-  width: 350px;
   z-index: 20;
+  right: 0;
+  bottom: -255px;
+  background-color: white;
+  border: 1px solid grey !important;
+  border-radius: 5px 0 0 5px;
+  box-shadow: 0 5px 10px #000000;
+  color: gray !important;
+  transition: all 0.3s ease-in-out;
 }
 
 .currency-converter .ui-wrap {
@@ -20,8 +20,8 @@
 
 .currency-converter .top,
 .currency-converter .bottom {
-  clear: both;
   display: block;
+  clear: both;
 }
 
 .currency-converter .currency {
@@ -45,50 +45,51 @@
 }
 
 .currency-converter input#ccInput {
-  font-size: 40px;
   height: 60px;
+  width: 350px;
   margin-top: 10px;
   padding-left: 10px;
-  width: 350px;
+  font-size: 40px;
 }
 
 .currency-converter input#ccInput::-webkit-outer-spin-button,
 .currency-converter input#ccInput::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
+  margin: 0;
+
+  -webkit-appearance: none;
 }
 
 .currency-converter span#ccOutput {
   display: block;
-  font-size: 40px;
   height: 60px;
-  margin-top: 30px;
   width: 350px;
+  margin-top: 30px;
+  font-size: 40px;
 }
 
 .currency-converter #errors {
-  color: red;
-  text-transform: uppercase;
   position: absolute;
   top: 72px;
   left: 80px;
   font-weight: bold;
+  color: red;
+  text-transform: uppercase;
 }
 
 .currency-converter .toggle {
-  border-top: 1px solid grey !important;
-  border-left: 1px solid grey !important;
-  border-right: 1px solid grey !important;
-  border-bottom: 1px solid white;
-  background-color: white;
-  cursor: pointer;
-  font-size: 10px;
   padding: 3px 8px;
   position: absolute;
-  right: -1px;
-  top: -28px;
-  border-radius: 10px 0 0 0;
   z-index: 21;
+  top: -28px;
+  right: -1px;
+  background-color: white;
+  border-top: 1px solid grey !important;
+  border-right: 1px solid grey !important;
+  border-bottom: 1px solid white;
+  border-left: 1px solid grey !important;
+  border-radius: 10px 0 0 0;
+  font-size: 10px;
+  cursor: pointer;
 }
 
 .show-converter {
